z-index fix on header mobile when class is active

--- a/app/components/navigation-header/scss/_navigation-header.scss
+++ b/app/components/navigation-header/scss/_navigation-header.scss
@@ -1,31 +1,37 @@
 .header {
   &__desktop {
-      background: #651142;
-      box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.4);
-      width: 100%;
-      min-height: 56px;
-      position: fixed;
-      top: -1px;
-      color: #fff;
-      transition: all 0.4s;
-      z-index: 9999;
-      a {
-        color: $color-white;
-        i {
-          font-size: 1.2em;
-          display: none;
-          &.active {
-            display: block;
-          }
+    background: #651142;
+    box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.4);
+    width: 100%;
+    min-height: 56px;
+    position: fixed;
+    top: -1px;
+    color: #fff;
+    transition: all 0.4s;
+    z-index: 9999;
+    a {
+      color: $color-white;
+      text-decoration: none;
+      i {
+        font-size: 1.2em;
+        display: none;
+        &.active {
+          display: block;
         }
       }
+    }
   }
   &__mobile {
     height: 100vh;
     width: 100%;
-    position: fixed;
+    position: absolute;
     overflow-y: scroll;
     overflow-x: hidden;
+    z-index: -1;
+    &.active {
+      z-index: 0;
+      position: fixed;
+    }
     .side-nav-accordion {
       overflow-y: scroll;
       overflow-x: hidden;
@@ -64,3 +70,12 @@
     flex-direction: row;
   }
 }
+//
+// @keyframes sideMenuindex {
+//   from{
+//     z-index: -1;
+//   }
+//   to {
+//     z-index: 1;
+//   }
+// }
